--- a/PerformanceTools/AndroidManifest.xml
+++ b/PerformanceTools/AndroidManifest.xml
@@ -5,41 +5,44 @@
     android:versionName="2.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="10"
         android:targetSdkVersion="17" />
-	
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <application
+        android:name="com.ucweb.tools.application.PerformanceToolsApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="com.ucweb.tools.application.PerformanceToolsApplication">
-        
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.ucweb.tools.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> 
-        
+        </activity>
         <activity
             android:name="com.ucweb.tools.activity.OperationActivity"
             android:label="@string/title" >
         </activity>
-        
         <activity
             android:name="com.ucweb.tools.activity.UploadRecodeActivity"
             android:label="@string/upload_activity_title" >
         </activity>
-        
-        <service android:name="com.ucweb.tools.service.MonitorService"></service>
-        
+
+        <service android:name="com.ucweb.tools.service.MonitorService" >
+        </service>
+
+        <activity
+            android:name="com.ucweb.tools.activity.SettingActivity"
+            android:label="@string/title_activity_setting" >
+        </activity>
     </application>
-    
+
 </manifest>
